example/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.nginx.home.techfitsu.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.home.techfitsu.org`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  #tls:
  #  secretName: local-example-com-tls
